# arrayfire-java-fla

./: .bazelrc  .bazelversion  .gitignore  LICENSE  README.md  WORKSPACE.bazel  arrayfire.BUILD  deps.bzl  jextract.BUILD
.github/workflows/: test.yaml
.ijwb/: .bazelproject
arrayfire/: AfBackend.java  AfDeviceInfo.java  AfIndex.java  AfSeq.java  AfSpan.java  AfStatus.java  AfStorage.java  AfVersion.java  Array.java  ArrayFire.java  ArrayFireException.java  ArrayFireTest.java  ArrayPair.java  ArrayTrio.java  B8.java  BUILD  Backend.java  Convolver2D.java  D0.java  D1.java  D2.java  D3.java  DataType.java  DataTypeEnum.java  DeviceInfo.java  DeviceMemInfo.java  Dim.java  ErrorArray.java  F16.java  F32.java  F64.java  GradFunction.java  Graph.java  HostArray.java  HostTensor.java  ImaxResult.java  Index.java  InterpolationType.java  MemoryContainer.java  MemoryScope.java  (+35 more)
arrayfire/autograd/: GradFunction.java  Graph.java
arrayfire/capi/: AfApi.java  AfNativeMethod.java  AfNativeMethod0.java  AfNativeMethod1.java  AfNativeMethod2.java  AfNativeMethod3.java  AfNativeMethod4.java  AfNativeMethod5.java  AfNativeMethod6.java  AfNativeMethod7.java  AfNativeMethod9.java  AfNativeMethodVoid2.java
arrayfire/containers/: B8Array.java  F16Array.java  F32Array.java  F64Array.java  NativeArray.java  S32Array.java  S64Array.java  TypedArray.java  U32Array.java  U64Array.java  U8Array.java
arrayfire/datatypes/: AfDataType.java  AfDataTypeEnum.java  AfDataTypeTest.java  B8.java  DataType.java  DataTypeEnum.java  DataTypeTest.java  F16.java  F32.java  F64.java  S32.java  U32.java  U64.java  U8.java
arrayfire/dims/: D0.java  D1.java  D2.java  D3.java  Dim.java
arrayfire/numbers/: A.java  B.java  C.java  D.java  E.java  F.java  Fixed.java  G.java  H.java  I.java  IntNumber.java  J.java  K.java  L.java  M.java  N.java  Num.java  O.java  P.java  Q.java  R.java  S.java  T.java  U.java  V.java  W.java  X.java  Y.java  Z.java  generate.sh
arrayfire/optimizers/: OptimizerProvider.java  SGD.java
arrayfire/utils/: Context.java  ContextTest.java  Contextual.java  Contextuals.java  Functions.java  IdentityHashSet.java  Memoizer.java  MemoizerTest.java  NamedContextual.java  Reference.java
bazel/: BUILD  java.bzl  kotlin.bzl  ts.bzl
examples/: BUILD  SimpleSGD.java
examples/mnist/: BUILD  ConvNN.java  Dataset.java  Harness.java  SimpleNN.java
fade/common/: BUILD  Memoizer.java  MemoizerTest.java
fade/context/: Context.java  ContextTest.java  Contextual.java  NamedContextual.java
fade/contextuals/: BUILD  Contextuals.java
fade/flags/: BUILD  Flag.java  Flags.java  FlagsTest.java
fade/functional/: Functions.java
